# App-Server-Client

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client  client.c  cmake_install.cmake  server  server.c
Client/: client.c  testo1.txt  testo2.txt  testo3.txt
Server/: server.c  sha256_utils.c  sha256_utils.h
